# claude-code-localllm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  gemini.md  pyproject.toml
.claude/commands/: copilot-suggest.md
.github/workflows/: local-llm-validate.yml
docs/: adapter-and-tool-schema.md  benchmark-output-schema.md  benchmarks.md  business-case.md  claim-hypotheses.md  codex-openrouter.md  copilot-cli.md  cuda-runtime-architecture.md  env-vars.md  error-taxonomy.md  installation-requirements.md  llamacpp-gguf-shortlist.md  llamacpp-setup.md  local-llm-integration-roadmap.md  local-llm-master-roadmap.md  local-llm-setup.md  local-model-candidates.md  local-model-validation.md  logging.md  metrics.md  model-tier-matrix.md  offload-playbook.md  openrouter-setup.md  operator-runbook.md  plugin-ux.md  policy-evaluation-schema.json  proxy-stack-selection.md  proxy-validation.md  repo-audit.md  rollout-plan.md  router-config-schema.json  routing-policy.md  security-checklist.md  session-2026-01-10-audit-and-infrastructure.md  signoff-checklist.md  task-classification.md  todo.md  vllm-setup.md  vllm-tool-parser-matrix.md
docs/examples/: README.md  router-config-openrouter.json  router-config.json
plugins/: README.md
plugins/local-llm-router/: README.md
tests/: __init__.py  test_json_lint.py  test_model_catalog.py
tools/local_llm/: README.md  cost_model.py  failure_injection.py  gpu_runtime_guard.py  json_lint.py  latency_probe.py  llamacpp_tool_probe.py  mock_openai_server.py  model_catalog.json  openrouter_model_check.py  (+30 more)
(+12 files in other folders)
